--- a/books/css/book_style.css
+++ b/books/css/book_style.css
@@ -9,7 +9,7 @@ body, html {
 /* Main styles */
 body {
     color: #F5F5F5;
-    background: #ffffff;
+    background: #b3e6ff;
     -moz-osx-font-smoothing: grayscale;
 }
 a {
