changed books color

--- a/books/css/books_component.css
+++ b/books/css/books_component.css
@@ -48,7 +48,7 @@
      min-width: 16em;
      margin: 0 1em 2.5em;
      padding: 1.5em 1.5em 2em;
-     background: #005580;
+     background: #e6b800;
      border-radius: 5px;
 }
  .product--selected {
