--- a/books/css/book_style.css
+++ b/books/css/book_style.css
@@ -8,7 +8,7 @@ body, html {
 }
 /* Main styles */
 body {
-    color: #F5F5F5;
+    color: #33cc33;
     background: #b3e6ff;
     -moz-osx-font-smoothing: grayscale;
 }
