changed books color

--- a/books/css/book_style.css
+++ b/books/css/book_style.css
@@ -8,8 +8,8 @@ body, html {
 }
 /* Main styles */
 body {
-    color: #33cc33;
-    background: #b3e6ff;
+    color: #ffffff;
+    background: #ffe066;
     -moz-osx-font-smoothing: grayscale;
 }
 a {
