--- a/books/css/books_component.css
+++ b/books/css/books_component.css
@@ -143,7 +143,7 @@
      outline: none;
 }
  .action--button {
-     background: #005580;
+     background: #ffe066;
      color: #fff;
      border-radius: 2px;
      -webkit-transition: background 0.2s;
