--- a/books/css/book_style.css
+++ b/books/css/book_style.css
@@ -9,7 +9,7 @@ body, html {
 /* Main styles */
 body {
     color: #ffffff;
-    background: #ffe066;
+    background: #d2e0e0;
     -moz-osx-font-smoothing: grayscale;
 }
 a {
