--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1006,7 +1006,7 @@ pre {
 
 
 
-
+/* All slide show css starts here */
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -1070,4 +1070,21 @@ pre {
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
   .text {font-size: 11px}
+}
+
+/* All table based css starts here */
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
 }
